Update build.gradle